test/error/directive_fail.true
File 0, line 2, col 13 - 14:
invalid directive "#"

